[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Player/Player 1.png" type="Texture" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/Player 2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Player 3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Player 4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Hit_damage.png" type="Texture" id=6]
[ext_resource path="res://Assets/Witch_effect.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 6.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 4 )

[node name="HitDamage" type="Sprite" parent="Sprites"]
visible = false
modulate = Color( 1, 1, 1, 0.329412 )
self_modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( 0, 0.5 )
texture = ExtResource( 6 )

[node name="WitchEffect" type="Sprite" parent="Sprites"]
visible = false
self_modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( 0, 0.5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Invincibilty" type="Timer" parent="."]
one_shot = true
